<resources>
    <string name="app_name">Story App</string>
    <string name="action_register">Register</string>

    <string name="title_dialog_error">Oops something wrong</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="label_is_havent_account">Don\'t have account ?</string>
    <string name="label_is_have_account">Already have account ?</string>
    <string name="action_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_welcome">Hello, Story Writer</string>
    <string name="label_login_welcome_desc">Please login so you can enjoy the full experience</string>
    <string name="action_to_register">Register here</string>
    <string name="label_register_welcome_desc">Register yourself to be a Story Writer</string>
    <string name="action_to_login">Login here</string>
    <string name="label_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nunc nec sodales consectetur. Sed eget auctor quam. Nulla facilisi. Etiam vitae nulla sed arcu varius tempus. Nullam ac diam ante. Donec condimentum cursus accumsan. Ut sit amet felis rutrum, posuere lorem sed</string>
    <string name="label_greeting_user">Hello, %1$s!</string>
    <string name="message_failed_take_picture">Upload failed</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="message_not_permitted">Permission not granted</string>
    <string name="action_logout">Logout</string>
    <string name="message_logout_confirm">Are you sure want logout ?</string>
    <string name="action_yes">Logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="message_incorrect_auth">Email or password incorrect</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="title_new_story">Add New Story</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="title_choose_a_picture">Choose a picture</string>
    <string name="message_success_upload">Upload berhasil</string>
    <string name="title_upload_info">Upload Info</string>
    <string name="action_upload_story">Upload Story</string>
    <string name="hint_description">Story Description</string>
    <string name="menu_setting">Setting</string>
    <string name="appwidget_text">Story Image Banner</string>
    <string name="empty_text">No Data</string>
    <string name="app_widget_description">Story App Image Banner Widget</string>
    <string name="title_profile">Profile</string>
    <string name="error_password_more_6">Password must more than 6 character</string>
    <string name="label_nama">Name</string>
    <string name="title_message">Information</string>
    <string name="message_register_success">Register Success</string>
    <string name="message_pick_image">Pick an image</string>
    <string name="error_desc_empty">Description can\'t empty</string>
    <string name="title_activity_story_map">StoryMapActivity</string>
    <string name="menu_maps">Maps</string>
    <string name="title_story_maps">Story Maps</string>
    <string name="message_loading_map">Loading map....</string>
    <string name="message_register_failed">Registration failed, try again later</string>
    <string name="error_style_parsing">Style parsing failed.</string>
    <string name="error_cant_find_style">\"Can\'t find style. Error: \"</string>
    <string name="message_error_stories">Stories not found</string>
    <string name="action_retry">Retry</string>
    <string name="message_location_not_found">Location is not found. Try again</string>
    <string name="label_share_location">Share your location</string>
    <string name="action_change_setting">Change Setting</string>
</resources>