<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:elevation="@dimen/dimen_6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bg_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackDim"
        android:elevation="@dimen/dimen_4dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_story"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeTitle"
        android:text="@string/label_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_24sp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        style="@style/StoryTextContent.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"/>

    <TextView
        android:id="@+id/tvWelcomeDesc"
        android:text="@string/label_login_welcome_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeTitle" />

    <TextView
        android:id="@+id/tvEmailTitle"
        style="@style/StoryTextContent.EditTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/label_email"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeDesc" />

    <com.elapp.storyapp.presentation.customview.StoryEmailEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:padding="@dimen/dimen_16dp"
        android:inputType="textEmailAddress"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvPasswordTitle"
        style="@style/StoryTextContent.EditTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <com.elapp.storyapp.presentation.customview.StoryPasswordEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:padding="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPassword"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/action_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
            android:id="@+id/tvIsHaventAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_is_havent_account"/>

        <TextView
            android:id="@+id/tvToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorLightGreen"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:text="@string/action_to_register"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>