<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.story.add.AddStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"/>

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/action_camera"
        android:translationZ="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPreview" />

    <Button
        android:id="@+id/btnOpenGallery"
        android:text="@string/action_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnOpenCamera" />

    <EditText
        android:id="@+id/edtStoryDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:padding="@dimen/dimen_16dp"
        android:inputType="textMultiLine"
        android:hint="@string/hint_description"
        android:gravity="top|start"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenGallery" />

    <TextView
        android:id="@+id/tvShareLocation"
        android:text="@string/label_share_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:layout_constraintStart_toStartOf="@id/edtStoryDesc"
        app:layout_constraintTop_toBottomOf="@id/edtStoryDesc"/>

    <CheckBox
        android:id="@+id/cbShareLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tvShareLocation"
        app:layout_constraintEnd_toEndOf="@+id/edtStoryDesc"
        app:layout_constraintTop_toTopOf="@id/tvShareLocation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:src="@drawable/ic_check"
        android:backgroundTint="@color/colorDarkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:elevation="@dimen/dimen_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bg_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackDim"
        android:elevation="@dimen/dimen_2dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>